# bm2

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
gameasm/: entry.cpp  gameasm.h
source/: alloc.cc  alloc.h  glad.c  glad.h  m_file.cc  m_log.cc  m_log.h  m_main.cc  m_misc.h  m_string.cc  r_buffer.cc  r_main.h  r_mesh.cc  r_shader.cc  r_window.cc
